--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Competences</title>
+    <title>Meine Mathe-Kompetenzen</title>
   </head>
   <body>
     <script src="index.js" type="module"></script>
